<resources>
    <string name="app_name">Avengers App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_menu_profile">Profile</string>
    <string name="title_menu_hero_list">Heroes</string>
    <string name="txt_button_login">Login</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_hint_usermamme">Username</string>
    <string name="txt_error_username_empty">Username cannot be empty</string>
    <string name="txt_error_password_empty">Password cannot be empty</string>
    <string name="txt_title_splashscreen">Avengers Hero</string>
    <string name="txt_subtitle_splashscreen">Alodokter Test App</string>
    <string name="txt_sucess_login">Login Success !</string>
    <string name="txt_error_login">Login Failed !</string>
    <string name="txt_button_logout">Logout</string>
    <string name="txt_error_get_data">Failed to get data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
